@@ -14,6 +14,10 @@ import com.util.Util;
 import com.view.hardware.page.EnvMonitorView;
 import com.view.hardware.page.TouristsNumberView;
 
+/**
+ * 套接字服务端客流统计数据处理类
+ * @author xiebing
+ */
 public class TouristsNumberService {
 	private TouristsNumberDao dao = (TouristsNumberDao) Factory.dao(TouristsNumberDaoImpl.class.getName());
 	private Client client;
@@ -22,9 +26,18 @@ public class TouristsNumberService {
 
 	private static Socket socket;
 	private static int sendForWho;
-	private static final int FUNC_CODE_REP = 0x42; // 客流数据上传
-	private static final int FUNC_CODE_HB = 0x43; // 心跳
-	private static final int FUNC_CODE_AUTH = 0x44; // 鉴权
+	/**
+	 * 客流数据上传
+	 */
+	private static final int FUNC_CODE_REP = 0x42;
+	/**
+	 *  心跳
+	 */
+	private static final int FUNC_CODE_HB = 0x43;
+	/**
+	 *  鉴权
+	 */
+	private static final int FUNC_CODE_AUTH = 0x44;
 
 	public TouristsNumberService(Client client, byte[] data, int length) {
 		this.client = client;
@@ -41,13 +54,13 @@ public class TouristsNumberService {
 		byte funCode = data[7];
 		switch (funCode) {
 		case FUNC_CODE_AUTH:
-			ResponseAuth(data);
+			responseAuth(data);
 			break;
 		case FUNC_CODE_HB:
-			ResponseHeartbeat(data);
+			responseHeartbeat(data);
 			break;
 		case FUNC_CODE_REP:
-			ResponseRepData(data);
+			responseRepData(data);
 			break;
 		default:
 			TouristsNumberView.insertMsg("unkonw funcode=" + funCode);
@@ -55,23 +68,23 @@ public class TouristsNumberService {
 		}
 	}
 
-	@SuppressWarnings("deprecation")
-	public int ResponseHeartbeat(byte[] b) throws IOException {
+	public int responseHeartbeat(byte[] b) throws IOException {
 		// 解析收到的client端发送的数据
 		// 1.版本号4字节，大端字节序，高位在前
 		int version = ((b[11] & 0xff) | ((b[10] & 0xff) << 8) | ((b[9] & 0xff) << 16) | ((b[8] & 0xff) << 24));
 		// 2.设备序列号
-		byte[] devSN = new byte[16];
-		System.arraycopy(b, 12, devSN, 0, 15);
-		String sn = new String(devSN);
+		byte[] devSn = new byte[16];
+		System.arraycopy(b, 12, devSn, 0, 15);
+		String sn = new String(devSn);
 		TouristsNumberView.insertMsg("收到心跳数据： version:" + version + ", sn:" + sn);
 
 		// 构建应答数据包
 		// 数据长度： 单元标识符1字节 + 功能码1字节 + 结果码1字节
 		int length = 1 + 1 + 1;
 		// 大端字节序，高位在前
-		b[4] = new Integer(length >> 8 & 0xff).byteValue();
-		b[5] = new Integer(length & 0xff).byteValue();
+
+		b[4] = Integer.valueOf(length >> 8 & 0xff).byteValue();
+		b[5] = Integer.valueOf(length & 0xff).byteValue();
 
 		// 结果码1字节
 		b[8] = 0x00;
@@ -88,15 +101,14 @@ public class TouristsNumberService {
 		return sendForWho;
 	}
 
-	@SuppressWarnings("deprecation")
-	public int ResponseAuth(byte[] b) throws IOException {
+	public int responseAuth(byte[] b) throws IOException {
 		// 解析收到的client端发送的数据
 		// 1.版本号4字节，大端字节序，高位在前
 		int version = ((b[11] & 0xff) | ((b[10] & 0xff) << 8) | ((b[9] & 0xff) << 16) | ((b[8] & 0xff) << 24));
 		// 2.设备序列号
-		byte[] devSN = new byte[16];
-		System.arraycopy(b, 12, devSN, 0, 15);
-		String sn = new String(devSN);
+		byte[] devSn = new byte[16];
+		System.arraycopy(b, 12, devSn, 0, 15);
+		String sn = new String(devSn);
 		TouristsNumberView.insertMsg("收到鉴权数据： version:" + version + ", sn:" + sn);
 
 		// 构造应答数据包
@@ -106,8 +118,8 @@ public class TouristsNumberService {
 		// 数据长度： 单元标识符1字节 + 功能码1字节 + 最后上传时间20字节 + 同步时间20字节 + 心跳间隔4字节
 		int length = 1 + 1 + 20 + 20 + 4;
 		// 大端字节序，高位在前
-		b[4] = new Integer(length >> 8 & 0xff).byteValue();
-		b[5] = new Integer(length & 0xff).byteValue();
+		b[4] = Integer.valueOf(length >> 8 & 0xff).byteValue();
+		b[5] = Integer.valueOf(length & 0xff).byteValue();
 
 		// 数据之最后上传时间、同步时间
 		byte[] arrayLastRepTime = TouristsNumberView.lastRepTimeVal.getText().getBytes();
@@ -116,10 +128,10 @@ public class TouristsNumberService {
 		System.arraycopy(arraySyncTime, 0, b, 28, 19);
 
 		// 数据之心跳时间间隔，大端字节序，高位在前
-		b[48] = new Integer(hbGap >> 24 & 0xff).byteValue();
-		b[49] = new Integer(hbGap >> 16 & 0xff).byteValue();
-		b[50] = new Integer(hbGap >> 8 & 0xff).byteValue();
-		b[51] = new Integer(hbGap & 0xff).byteValue();
+		b[48] = Integer.valueOf(hbGap >> 24 & 0xff).byteValue();
+		b[49] = Integer.valueOf(hbGap >> 16 & 0xff).byteValue();
+		b[50] = Integer.valueOf(hbGap >> 8 & 0xff).byteValue();
+		b[51] = Integer.valueOf(hbGap & 0xff).byteValue();
 
 		// 数据包总长度：MBAP头7字节+功能码1字节+数据44字节
 		int packLen = 52;
@@ -130,8 +142,7 @@ public class TouristsNumberService {
 		return 0;
 	}
 
-	@SuppressWarnings("deprecation")
-	private int ResponseRepData(byte[] b) throws IOException {
+	private int responseRepData(byte[] b) throws IOException {
 		// 解析收到的client端发送的数据
 		// 1.客流记录数量2字节，大端字节序，高位在前
 		int num = ((b[9] & 0xff) | ((b[8] & 0xff) << 8));
@@ -139,10 +150,10 @@ public class TouristsNumberService {
 		int index = 10;
 		int in = 0;
 		int out = 0;
-		byte[] devSN = new byte[16];
+		byte[] devSn = new byte[16];
 		byte[] dateTime = new byte[20];
 		for (int i = 0; i < num; i++) {
-			System.arraycopy(b, index, devSN, 0, 15);
+			System.arraycopy(b, index, devSn, 0, 15);
 			index += 16;
 			in = ((b[index + 1] & 0xff) | ((b[index] & 0xff) << 8));
 			index += 2;
@@ -150,7 +161,7 @@ public class TouristsNumberService {
 			index += 2;
 			System.arraycopy(b, index, dateTime, 0, 19);
 			index += 20;
-			String sn = new String(devSN);
+			String sn = new String(devSn);
 			String time = new String(dateTime);
 			TouristsNumberView.insertMsg("[" + sn + "]收到客流数据:" + num + ", in: " + in + ", out: " + out + ", 时间: " + time);
 			// 数据处理
@@ -158,9 +169,9 @@ public class TouristsNumberService {
 			EnvMonitorView.insertMsg("成功处理数据" + result + "条");
 		}
 
-		Map<String, String> data = new HashMap<String, String>();
+		Map<String, String> data = new HashMap<String, String>(1);
 		data.put("lastRepTime", new String(dateTime));
-		Map<String, Map<String, String>> update = new HashMap<String, Map<String, String>>();
+		Map<String, Map<String, String>> update = new HashMap<String, Map<String, String>>(1);
 		update.put("tourists_number", data);
 		Util.updateIni(update);
 
@@ -168,8 +179,8 @@ public class TouristsNumberService {
 		// 数据长度： 单元标识符1字节 + 功能码1字节 + 结果码1字节
 		int length = 1 + 1 + 1;
 		// 大端字节序，高位在前
-		b[4] = new Integer(length >> 8 & 0xff).byteValue();
-		b[5] = new Integer(length & 0xff).byteValue();
+		b[4] = Integer.valueOf(length >> 8 & 0xff).byteValue();
+		b[5] = Integer.valueOf(length & 0xff).byteValue();
 
 		// 结果码1字节
 		b[8] = 0x00;
@@ -186,11 +197,10 @@ public class TouristsNumberService {
 		return 0;
 	}
 
-	@SuppressWarnings("deprecation")
 	public String bytesToHex(byte[] bytes, int lenght) {
 		StringBuffer sb = new StringBuffer();
 		for (int i = 0; i < lenght; i++) {
-			sb.append(String.format("%02X ", new Integer(bytes[i] & 0xFF)));
+			sb.append(String.format("%02X ", Integer.valueOf(bytes[i] & 0xFF)));
 		}
 
 		return sb.toString();
